--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -25,7 +25,21 @@
     "click_sidebar": "बाएं साइडबार मेनू का उपयोग करें",
     "actions": "क्रियाएं",
     "back_to_home": "होम पर वापस",
-    "close": "बंद करें"
+    "close": "बंद करें",
+    "languages": {
+      "en": "अंग्रेज़ी",
+      "zh": "चीनी",
+      "es": "स्पेनिश",
+      "de": "जर्मन",
+      "fr": "फ्रेंच",
+      "it": "इतालवी",
+      "pt": "पुर्तगाली",
+      "ru": "रूसी",
+      "ja": "जापानी",
+      "ko": "कोरियाई",
+      "ar": "अरबी",
+      "hi": "हिंदी"
+    }
   },
   "theme": {
     "light": "लाइट",
@@ -2448,6 +2462,76 @@
         "title": "इमेज से डॉट मैट्रिक्स - इमेज को पिक्सेल आर्ट इफेक्ट में बदलें",
         "description": "कई डॉट आकारों और रंग मोड के साथ इमेज या टेक्स्ट को डॉट मैट्रिक्स आर्ट में बदलें। रचनात्मक डिज़ाइन के लिए मुफ्त ऑनलाइन टूल।",
         "keywords": "डॉट मैट्रिक्स, पिक्सेल आर्ट, इमेज इफेक्ट"
+      }
+    },
+    "i18n-json-translator": {
+      "name": "i18n JSON अनुवादक",
+      "description": "एक बार में पूरे JSON लोकेल फ़ाइलों का अनुवाद करें। अपनी आधार सामग्री पेस्ट करें, लक्ष्य भाषाएँ चुनें, और उपकरण आपके OpenRouter-संचालित API को सपाट कुंजियों के साथ कॉल करेगा।",
+      "workflow_badge": "i18n वर्कफ़्लो",
+      "source_title": "स्रोत JSON",
+      "source_desc": "अपनी आधार लोकेल JSON फ़ाइल पेस्ट या ड्रॉप करें। केवल स्ट्रिंग मान अनुवाद API को भेजे जाते हैं।",
+      "source_language": "स्रोत भाषा",
+      "target_languages": "लक्ष्य भाषाएँ",
+      "source_placeholder": "यहाँ JSON लोकेल डेटा पेस्ट करें...",
+      "translate_button": "अनुवाद शुरू करें",
+      "sample_button": "नमूना डेटा उपयोग करें",
+      "options_title": "अनुवाद वरीयताएँ",
+      "options_desc": "नियंत्रित करें कि प्लेसहोल्डर, सहायक टेक्स्ट और HTML टुकड़ों को हमारे API को कॉल करने से पहले कैसे संसाधित किया जाए।",
+      "option_placeholders": "प्लेसहोल्डर लॉक करें",
+      "option_placeholders_desc": "ICU चर (जैसे name, count) की सुरक्षा करें ताकि अनुवादित प्रति सटीक टोकन रखे।",
+      "option_skip_short": "छोटी स्ट्रिंग छोड़ें",
+      "option_skip_short_desc": "चयनित लंबाई से छोटे सहायक लेबल को अनदेखा करें।",
+      "option_strip_html": "HTML टैग हटाएँ",
+      "option_strip_html_desc": "टूटे मार्कअप से बचने के लिए मॉडल को टेक्स्ट भेजने से पहले HTML टैग हटाएँ।",
+      "option_include_keys": "कुंजी संकेत भेजें",
+      "option_include_keys_desc": "प्रत्येक वाक्य के बारे में मॉडल को अधिक संदर्भ देने के लिए कुंजी पथ संलग्न करें।",
+      "entries_detected": "अनुवाद के लिए {count} स्ट्रिंग का पता चला",
+      "progress_title": "अनुवाद कतार",
+      "progress_desc": "प्रत्येक भाषा की प्रतीक्षा, अनुवाद या पहले से पूर्ण होने की स्थिति की निगरानी करें।",
+      "completed": "पूर्ण",
+      "failed": "असफल",
+      "progress": "प्रगति",
+      "entries": "प्रविष्टियाँ",
+      "status": "स्थिति",
+      "queued": "कतार में",
+      "translating": "अनुवाद हो रहा है",
+      "output_title": "अनुवाद परिणाम",
+      "output_desc": "अनुवादित लोकेल JSON की समीक्षा करें, कॉपी करें या डाउनलोड करें। गैर-स्ट्रिंग फ़ील्ड अछूते रहते हैं।",
+      "output_placeholder": "यहाँ प्रत्येक भाषा का पूर्वावलोकन करने के लिए अनुवाद चलाएँ।",
+      "key_path": "कुंजी पथ",
+      "preview": "पूर्वावलोकन",
+      "preview_limit": "पूर्वावलोकन में +{count} और प्रविष्टियाँ छुपी हुई हैं",
+      "copied_message": "{language} अनुवाद क्लिपबोर्ड पर कॉपी किया गया",
+      "select_language_tip": "कम से कम एक लक्ष्य भाषा चुनें",
+      "invalid_json": "स्रोत JSON में वाक्यविन्यास त्रुटियाँ हैं",
+      "empty_entries": "कोई स्ट्रिंग मान नहीं मिले। सुनिश्चित करें कि आपके JSON में टेक्स्ट नोड हैं।",
+      "introduction": "i18n JSON अनुवादक टीमों को ऐप्स को स्थानीयकृत करने के तरीके को सुव्यवस्थित करता है। यह नेस्टेड लोकेल फ़ाइलों को सपाट करता है, कुंजी पथों को संरक्षित करता है, और केवल स्ट्रिंग मानों को आपके OpenRouter-आधारित बैकएंड को भेजता है। API उत्तर देने के बाद, उपकरण मूल संरचना को पुनर्निर्माण करता है ताकि आप सेकंडों में उत्पादन-तैयार फ़ाइल को कॉपी या डाउनलोड कर सकें।",
+      "features": [
+        "स्वचालित रूप से प्रत्येक नेस्टेड कुंजी निकालता है और अनुवाद के बाद सटीक JSON संरचना को पुनर्स्थापित करता है।",
+        "केवल स्ट्रिंग मान बैकएंड को भेजता है ताकि संख्याएँ, बूलियन और मेटाडेटा अछूते रहें।",
+        "सामग्री LLM तक पहुँचने से पहले प्लेसहोल्डर, HTML टैग और छोटे सहायक लेबल के लिए उन्नत सुरक्षा।",
+        "लाइव स्थिति के साथ भाषा कतार प्लस प्रत्येक अनुवादित प्रविष्टि के लिए diff-अनुकूल पूर्वावलोकन।",
+        "प्रति भाषा पूर्ण रूप से स्वरूपित लोकेल फ़ाइल को तुरंत कॉपी या डाउनलोड करने की क्रियाएँ।",
+        "100% क्लाइंट-साइड पार्सिंग - केवल आपका API एंडपॉइंट उन मानों को प्राप्त करता है जिनके लिए अनुवाद की आवश्यकता है।"
+      ],
+      "faq": [
+        {
+          "question": "उपकरण मेरे API को क्या पेलोड भेजता है?",
+          "answer": "प्रत्येक अनुरोध sourceLanguage, targetLanguage, entries ({key, value} सरणी) और चयनित विकल्पों को /api/i18n-translate पर पोस्ट करता है। आप उस पेलोड को OpenRouter या किसी भी कस्टम अनुवाद सेवा में अग्रेषित कर सकते हैं।"
+        },
+        {
+          "question": "प्लेसहोल्डर और HTML की सुरक्षा कैसे की जाती है?",
+          "answer": "प्लेसहोल्डर लॉक या HTML स्ट्रिपिंग विकल्प सक्षम करें। उपकरण ICU टोकन जैसे {count} को बरकरार रखता है और टेक्स्ट मॉडल तक पहुँचने से पहले HTML टैग हटा सकता है, टूटे मार्कअप को रोकता है।"
+        },
+        {
+          "question": "क्या मैं एक साथ कई भाषाओं का अनुवाद कर सकता हूँ?",
+          "answer": "हाँ। आवश्यकतानुसार जितनी चाहें उतनी लक्ष्य भाषाएँ जोड़ें। UI प्रत्येक भाषा को स्वतंत्र रूप से ट्रैक करता है ताकि आप जान सकें कि कौन सी कतार में हैं, चल रही हैं, पूर्ण हुई हैं या असफल हुई हैं।"
+        }
+      ],
+      "meta": {
+        "title": "i18n JSON अनुवादक - OpenRouter के साथ JSON फ़ाइलों को स्थानीयकृत करें",
+        "description": "लोकेल JSON कुंजियों को सपाट करें, उन्हें अपने OpenRouter अनुवाद बैकएंड को भेजें, और फ़ाइल को स्वचालित रूप से पुनर्निर्माण करें।",
+        "keywords": "i18n,json अनुवादक,openrouter,स्थानीयकरण,अनुवाद उपकरण"
       }
     }
   },
